[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/GUIFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/screen_options/ScreenOptions.gd" type="Script" id=3]

[node name="ScreenOptions" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.297302
margin_bottom = -0.297302
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 179.0
margin_top = 99.0
margin_right = 300.0
margin_bottom = 220.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetSave" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 21.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Reset Save"
flat = true
expand_icon = true

[node name="Controls" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 121.0
margin_bottom = 46.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Control Method"
flat = true
expand_icon = true

[node name="Music" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 121.0
margin_bottom = 71.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Music -----"
flat = true
expand_icon = true

[node name="Effects" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 121.0
margin_bottom = 96.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Effects -----"
flat = true
expand_icon = true

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 121.0
margin_bottom = 121.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.313726, 0.266667, 1 )
enabled_focus_mode = 0
text = "Back"
flat = true
expand_icon = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetSave" to="." method="_on_ResetSave_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Effects" to="." method="_on_Effects_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
